<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PocketGeigerType6</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="calibration_coefficient_title">Calibration Coefficient</string>
    <string name="calibration_offset_title">Coefficient Offset</string>
    <string name="measurement_time_title">Measurement Time</string>
    <string name="serial_setting_title">Serial Setting</string>
    
    <string name="calibrationcoefficient_title">Coefficient (cpm / 1uSv/h)</string>
    <string name="calibrationoffset_title">Offset (cpm / 1uSv/h)</string>
    <string name="measurementtime_title">Measurement Time</string>
    <string name="measurementtime_summary">measurement time</string>
    <string name="baudrate_title">Baudrate</string>
    <string name="baudrate_summary">baud rate</string>
    <string name="databits_title">Data bits</string>
    <string name="databits_summary">Data bits</string>
    <string name="parity_title">Parity check</string>
    <string name="parity_summary">Parity check</string>
    <string name="stopbits_title">Stop bit</string>
    <string name="stopbits_summary">Stop bit</string>
    <string name="flowcontrol_title">Flow control</string>
    <string name="flowcontrol_summary">Flow control</string>
    
</resources>
