<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.radiation_watch.pocketgeigertype6.MainActivity" >

    <item
        android:id="@+id/opt_measurement_time"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/measurement_time_title"/>
    
    <item
        android:id="@+id/opt_calibration_coefficient"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/calibration_coefficient_title"/>

    <item
        android:id="@+id/opt_serial_setting"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/serial_setting_title"/>
    
</menu>
